# email-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  Procfile.dev  README.md  TODO.md  alembic.ini  docker-compose.yml  email-agent-memory-design.html  email-agent-mvp-handoff.md  pyproject.toml
docker/sandbox/: Dockerfile
docs/: apple-shortcuts-surface-api.md  assistant-owned-frontends-synthesis.md  assistant-surfaces-implementation-plan.md  assistant-tools-api.md  email-first-human-agent-collaboration.md  flue-architecture-patterns.md
docs/superpowers/plans/: 2026-05-10-slice-1-core-data-and-ports.md  2026-05-10-slice-2-mailgun-inbound-and-threading.md  2026-05-10-slice-3-budget-and-template-replies.md  2026-05-10-slice-4-sandbox.md  2026-05-10-slice-5-agent-runtime.md  2026-05-10-slice-7-procrastinate-jobs.md  (+4 more)
scripts/: dev-worktree-down  dev-worktree-up
src/email_agent/: __init__.py  cli.py  composition.py  config.py
tests/: conftest.py
tests/integration/: conftest.py  test_alembic_upgrade.py  test_cognee_memory_adapter.py  test_db_roundtrip.py  test_deepseek_smoke.py  test_docker_sandbox.py  test_docker_workspace_provider.py  test_fireworks_smoke.py  test_inbound_pipeline.py  test_scheduled_tick.py
tests/unit/: test_assistant_router.py  test_budget_governor.py  test_cli.py  test_composition.py  test_domain_models.py  test_email_models.py  test_inbound_persister.py  test_inmemory_email_provider.py  test_inmemory_memory.py  test_mailgun_provider.py  test_mailgun_send_reply.py  test_ports.py  test_settings.py  test_thread_resolver.py  test_webhook.py
(+163 files in other folders)
