[project]
name = "email-assistant"
version = "0.1.0"
description = "Email-based AI assistant runtime"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cognee>=1.0.2",
    "docker>=7.1.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-ai-slim[openai]>=1.93.0",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.28",
    "sqlalchemy[asyncio]>=2.0.49",
    "typer>=0.25.1",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
    "ty>=0.0.34",
]

[project.scripts]
email-agent = "email_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/email_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: requires Postgres running via docker-compose",
  "requires_docker: requires a reachable docker daemon",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
  "E", "F", "W",
  "I",
  "UP",
  "B",
  "SIM",
  "N",
  "C4",
  "PIE",
  "PT",
  "RET",
  "TID",
  "ASYNC",
  "RUF",
]
ignore = [
  "E501",
  "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["src", "tests"]
